# hive-messaging

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.services  README.md  build.rs  docker-compose.yml  run.sh
app_sandbox/: .dockerignore  .gitignore  main.css  package.json  webpack.config.js
app_sandbox/crate/: .dockerignore  Cargo.toml  build.rs  generate_js_protos.sh
app_sandbox/crate/src/: app.rs  lib.rs  storage.rs
app_sandbox/crate/src/bindings/: accounts_svc_bindings.rs  common_bindings.rs  msg_svc_bindings.rs
docker/: Dockerfile.envoy  Dockerfile.services  Dockerfile.webapp  envoy.yaml  envoy_test.yaml
docker/debug/: Dockerfile.services
docker/release/: Dockerfile.services
hive-accounts-svc/: Cargo.toml  start.sh
hive-accounts-svc/src/: config.rs  errors.rs  grpc.rs  lib.rs  main.rs  persistence.rs  service.rs
hive-accounts-svc/src/persistence/: entities.rs  errors.rs  mod.rs  tests.rs
hive-accounts-svc/src/service/: in_memory.rs  mod.rs  tests.rs
hive-commons/: Cargo.toml  build.rs
hive-commons/proto/: accounts_svc.proto  common.proto  messages_svc.proto
hive-commons/src/: error.rs  lib.rs  session.rs  time.rs
hive-commons/src/crypto/: certificates.rs  cryptostorage.rs  encryption.rs  error.rs  keys.rs  mod.rs  ratchet.rs  signing.rs  utils.rs  x3dh.rs
hive-commons/src/model/: error.rs  mod.rs
hive-commons/src/protocol/: error.rs  mod.rs  session.rs
hive-crypto/: Cargo.toml
hive-crypto/src/: certificates.rs  cryptostorage.rs  dalek_keys.rs  error.rs  keys.rs  lib.rs  ratchet.rs  test_utils.rs  x3dh.rs
hive-grpc/: Cargo.toml  build.rs
hive-grpc/proto/: accounts_svc.proto  hive_common.proto  messages_svc.proto
hive-grpc/src/: .gitignore  lib.rs
hive-messages-svc/: Cargo.toml  start.sh
hive-messages-svc/src/: errors.rs  lib.rs  main.rs
hive-messages-svc/src/persistence/: entities.rs  errors.rs  mod.rs  tests.rs
hive-messages-svc/src/service/: in_memory.rs  mod.rs  tests.rs
hive-postgres-wrapper/: Cargo.toml
hive-postgres-wrapper/src/: lib.rs
hive-server-embedded/: Cargo.toml
hive-server-embedded/src/: code_attic.rs  key_mgmt.rs  main.rs
hive-server-embedded/src/accounts/: grpc.rs  interfaces.rs  mod.rs
hive-server-embedded/src/messages/: interfaces.rs  mod.rs
hive-svc-accounts/: Cargo.toml
hive-svc-accounts/src/: lib.rs  main.rs
hive-webapp/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  generate_js_protos.sh  index.html  package.json  webpack.config.js
hive-webapp/crate/: Cargo.toml
hive-webapp/crate/src/: app.rs  contacts.rs  lib.rs  lib_original.rs  lib_sandbox.rs  storage.rs
hive-webapp/crate/src/bindings/: accounts_svc_bindings.rs  common_bindings.rs  mod.rs  msg_svc_bindings.rs
hive-webapp/crate/src/views/: contacts.rs  mod.rs
hive-webapp/js/: .gitignore  Dockerfile  build.sh  build_app_via_docker.sh  build_js_app.sh  generate_interface.sh  qr_scanner.js
hive-webapp/js/src/: client.js  package.json
hive-webapp/resources/: prototype_design.css  prototype_design.html
hive-webapp/scripts/: Dockerfile.protoc  generate_js_protos.sh
hive-webapp/src/: app.rs  contacts.rs  identity.rs  lib.rs  main.rs  messages.rs  state.rs  storage.rs  transport.rs
hive-webapp/src/bindings/: accounts_svc_bindings.rs  common_bindings.rs  mod.rs  msg_svc_bindings.rs
hive-webapp/src/ctrl/: contacts.rs  error.rs  identity.rs  messaging.rs  mod.rs  storage.rs
hive-webapp/src/transport/: mod.rs
hive-webapp/src/views/: contacts.rs  messaging.rs  mod.rs  qr_scanner.rs
hive-webapp/static/: index.html  main.css
hive-webclient/: Cargo.toml
hive-webclient/src/: main.rs
proto/: accounts_svc.proto
resources/: messages.proto
resources/proto/: messages.proto
src/: crypto.rs  main.rs  message_codec.rs  messages.rs  prelude.rs
src/accounts/: grpc.rs  interfaces.rs  mod.rs  rpc.rs
src/crypto/: certificates.rs  cryptostorage.rs  dalek_keys.rs  error.rs  interfaces.rs  mod.rs  ratchet.rs  x3dh.rs
src/messages/: interfaces.rs  mod.rs
src/net/: message_codec.rs  messages.rs  mod.rs
