[package]
name = "hive"
version = "0.1.0"
authors = ["super-horst <super-horst>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"

tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3.1", features = ["codec"] }
futures = "0.3"

error-chain = "0.12.2"

protobuf = { version = "2.14", features = ["with-bytes"] }
base64 = "0.12.0"

# crypto
rand = "0.6"
rand_core = "0.5"
x25519-dalek = "0.6"
ed25519-dalek = "0.9"
hkdf = "0.8"
sha2 = "0.8.2"

[build-dependencies]
protobuf-codegen-pure = "2.14"