[package]
name = "hive-accounts-svc"
version = "0.1.0"
authors = ["horst <horst>"]
edition = "2018"

[dependencies]
hive-commons = { version = "0.1.0", path = "../hive-commons", features=["transport", "storage"] }

log = "0.4.11"
env_logger = "0.7.1"
bytes = "0.5.4"
dashmap = "3.11.4"
hex = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"

percent-encoding = "2.0"

# transport layer
tonic = "0.3.1"
prost = "0.6.1"

# async runtime
tokio = { version = "0.2.22", features = ["full"] }
async-trait = "0.1.33"

# db layer
oxidizer = "0.2.1"

#util
rand = "0.7.3"
failure = "0.1.8"
chrono = "0.4.15"

[dev-dependencies]
testcontainers = "0.11.0"
mockall = "0.8.1"
futures = "0.3"
