[package]
name = "hive-commons"
version = "0.1.0"
authors = ["horst <horst>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
transport = ["tonic"]
web = ["uuid/wasm-bindgen", "js-sys"]

[dependencies]
# structural
failure = "0.1.8"

# tools
hex = "0.4.2"
uuid = { version = "0.8.1", features = ["v4"] }
dashmap = "3.11.4"

# serialisation
bytes = "0.5.4"
prost = "0.6.1"
# keep serde version fixed until update of oxidizer&refinery
serde = { version = "=1.0.118", features = ["derive", "rc"] }

# crypto
rand = "0.6"
rand_core = "0.5"
curve25519-dalek = "3.0.0"
chacha20poly1305 = "0.5.1"
hkdf = { version = "0.10.0", features= ["std"] }
digest = "0.9.0"
sha2 = "0.9"

js-sys =  { version = "0.3.45" , optional = true}

tonic = { version = "0.3.1" , optional = true}

[dev-dependencies]
serde_json = "1.0"
tokio = { version = "0.2.22", features = ["full"]}

[build-dependencies]
cfg-if = "0.1.10"
tonic-build = "0.3.1"