[package]
name = "hive-grpc"
version = "0.1.0"
authors = ["horst <horst>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["transport"]
transport = ["tonic"]

[dependencies]
failure = "0.1.8"

tonic = { version = "0.3.1" , optional = true}
prost = "0.6.1"

bytes = "0.5.4"

hive-crypto = { version = "0.1.0", path = "../hive-crypto" }

[build-dependencies]
cfg-if = "0.1.10"
tonic-build = "0.3.1"