[package]
name = "hive-webapp"
version = "0.1.0"
authors = ["horst <horst>"]
edition = "2018"

[dependencies]
strum = "0.13"
strum_macros = "0.13"
serde = { version = "1.0", features = ["derive"] }

base64 = "0.12.3"

wasm-logger = "0.2.0"
yew = { package = "yew-stdweb", version = "0.17.2" }

hive-crypto = { version = "0.1.0", path = "../hive-crypto" }

# incompatible due to missing wasm support
# hive-grpc = { version = "0.1.0", path = "../hive-grpc" }

[profile.release]
opt-level = "s"