[package]
name = "hive-webapp"
version = "0.1.0"
authors = ["horst <horst>"]
edition = "2018"

[dependencies]
strum = "0.13"
strum_macros = "0.13"
serde = { version = "1.0", features = ["derive"] }

base64 = "0.12.3"

wasm-logger = "0.2.0"
yew = { package = "yew-stdweb", version = "0.17.2" }

hive-commons = { version = "0.1.0", path = "../hive-commons" , features = ["web"]}

[profile.release]
lto = true
opt-level = "s"