[package]
name = "hive-webapp"
version = "0.1.0"
authors = ["horst <horst>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.66"
js-sys = "0.3.45"
web-sys =  { version ="0.3.45" , features = ["Location", "Window"]}

hex = "0.4.2"
uuid = { version = "0.8.1", features = ["v4", "wasm-bindgen", "serde"] }
log = "0.4.11"
wasm-logger = "0.2.0"

# keep serde version fixed until update of oxidizer&refinery
serde = { version = "=1.0.118", features = ["derive"] }
base64 = "0.12.3"
wasm-bindgen-futures = { version = "0.3.21", features = ["futures_0_3"] }

yew = "0.17.4"
console_error_panic_hook = { version = "0.1.5" }

hive-commons = { version = "0.1.0", path = "../hive-commons" , features = ["web"]}
