[package]
name = "hive-webapp"
version = "0.1.0"
authors = ["horst <horst>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.66"
js-sys = "0.3.45"

wasm-bindgen-futures = { version = "0.3.21", features = ["futures_0_3"] }

console_error_panic_hook = { version = "0.1.5" }

hive-commons = { version = "0.1.0", path = "../../hive-commons" , features = ["web"]}